--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </section>
     <section class="sectionTwo">
-        <!-- <h1>FEATURED | view all featured media</h1> -->
+        <h1>FEATURED | view all featured media</h1>
         <div class="main">
             <div class="one">
                 <div class="imgfordiv">
