--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
         </div>
         <nav>
             <ul>
-                <a href="/index.html"><li>მთავარ</li></a>
-                <a href="/new.html"><li>სიახლე</li></a>
-                <a href="/contact.html"><li>კონტენტ</li></a>
+                <a href="index.html"><li>მთავარ</li></a>
+                <a href="new.html"><li>სიახლე</li></a>
+                <a href="contact.html"><li>კონტენტ</li></a>
             </ul>
         </nav>
     </header>
