--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <nav>
             <ul>
-                <a href="/index.html"><li>მთავარ</li></a>
-                <a href="/new.html"><li>სიახლე</li></a>
+                <a href="index.html"><li>მთავარ</li></a>
+                <a href="new.html"><li>სიახლე</li></a>
                 <a href="contact.html"><li>კონტენტ</li></a>
             </ul>
         </nav>
