--- a/new.html
+++ b/new.html
@@ -36,6 +36,11 @@
             </div>
         </div>
     </section>
+    <div class="number">
+        <p>27</p>
+    </div>
+    <p>მაისი</p>
+
     <section>
         <h1>ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ</h1>
         <div class="information">
@@ -47,6 +52,11 @@
             </div>
         </div>
     </section>
+    <div class="number">
+        <p>27</p>
+    </div>
+    <p>მაისი</p>
+
     <section>
         <h1>ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ</h1>
         <div class="information">
