--- a/index.html
+++ b/index.html
@@ -11,53 +11,56 @@
     <title>project</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img class="logo" src="./img/logo.png" alt="logo">
-        </div>
-        <nav>
-            <ul>
-                <a href="index.html"><li>მთავარ</li></a>
-                <a href="new.html"><li>სიახლე</li></a>
-                <a href="contact.html"><li>კონტენტ</li></a>
-            </ul>
-        </nav>
-    </header>
-    <section class="banner">
-        <div class="bannerImg">
-            <div class="content">
-                <p >ამბები არ არის ყოველთვის<br> ერთმნიშვნელოვნად<br> #000000<br> ან <br>#FFFFFF</p>
+    <main>
+        <header>
+            <div class="logo">
+                <img class="logo" src="./img/logo.png" alt="logo">
             </div>
-        </div>
-    </section>
-    <section class="sectionTwo">
-        <h1>FEATURED | view all featured media</h1>
-        <div class="main">
-            <div class="one">
-                <div class="imgfordiv">
-                    <img src="./img/hand.png" alt="hand">
-                </div>
-                <div class="info">
-                    <p>approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>
+            <nav>
+                <ul>
+                    <a href="index.html"><li>მთავარ</li></a>
+                    <a href="new.html"><li>სიახლე</li></a>
+                    <a href="contact.html"><li>კონტენტ</li></a>
+                </ul>
+            </nav>
+        </header>
+        <section class="banner">
+            <div class="bannerImg">
+                <div class="content">
+                    <p >ამბები არ არის ყოველთვის<br> ერთმნიშვნელოვნად<br> #000000<br> ან <br>#FFFFFF</p>
                 </div>
             </div>
-            <div class="one">
-                <div class="imgfordiv">
-                    <img src="./img/code.png" alt="code">
+        </section>
+        <section class="sectionTwo">
+            <h1>FEATURED | view all featured media</h1>
+            <div class="main">
+                <div class="one">
+                    <div class="imgfordiv">
+                        <img src="./img/girl.svg" alt="girl">
+                    </div>
+                    <div class="info">
+                        <p>approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>
+                    </div>
                 </div>
-                <div class="info">
-                    <p class="change">Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>
+                <div class="one">
+                    <div class="imgfordiv">
+                        <img src="./img/boy.svg" alt="boy">
+                    </div>
+                    <div class="info">
+                        <p class="change">Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <footer>
-        <div class="facebook">
-            <img src="./img/facebook-logo.png" alt="facebook">
-        </div>
-        <div class="yout">
-            <img src="./img/youtube.svg" alt="youtube">
-        </div>
-    </footer>
+        </section>
+        <footer>
+            <div class="facebook">
+                <img src="./img/facebook-logo.png" alt="facebook">
+            </div>
+            <div class="yout">
+                <img src="./img/youtube.svg" alt="youtube">
+            </div>
+        </footer>
+    
+    </main>
 </body>
 </html>
